--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
 
   </head>
   <body>
-    <!-- <app-shell></app-shell> -->
-    <life-app></life-app>
+    <app-shell></app-shell>
     <script type="text/javascript">
       (function() {
         if ('registerElement' in document
