--- a/src/life-dialogs/life-save-dialog.html
+++ b/src/life-dialogs/life-save-dialog.html
@@ -6,7 +6,7 @@
 
 <dom-module id="life-save-dialog">
   <template>
-    <paper-dialog id="dialog">
+    <paper-dialog>
       <paper-input label="Title" value="{{target.title}}"></paper-input>
       <div style="position: relative;">
         <a href="[[_downloadURL]]" download="[[_downloadFileName]]">
@@ -57,7 +57,7 @@
       },
 
       open: function(){
-        this.$.dialog.open();
+        document.querySelector('paper-dialog').open();
       }
     });
   </script>
