--- a/src/life-catalog/life-catalog.html
+++ b/src/life-catalog/life-catalog.html
@@ -93,7 +93,7 @@
       is: 'life-catalog',
       behaviors: [LifePatternCatalogBehavior],
       properties: {
-        // route: Object,
+        route: Object,
         // routeData: Object,
 
         // app: {
