--- a/src/life-catalog/life-catalog.html
+++ b/src/life-catalog/life-catalog.html
@@ -30,8 +30,8 @@
     </div>
 
     <div class="buttons">
-      <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="goBack">Back</paper-button>
-      <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="goNext">Next</paper-button>
+      <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="_handleGoBack">Back</paper-button>
+      <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="_handleGoNext">Next</paper-button>
     </div>
   </template>
 
@@ -93,7 +93,7 @@
       is: 'life-catalog',
       behaviors: [LifePatternCatalogBehavior],
       properties: {
-        // route: Object,
+        route: Object,
         _routeData: Object,
 
         // app: {
@@ -120,17 +120,27 @@
       },
 
       observers: [
-        // '_reflectToPageURL(route.path)',
         '_routePageChanged(_routeData.page)',
-        '_pageChanged(currentPage)',
+        '_restoreRoutePage(route.prefix)',
       ],
 
       _routePageChanged: function(page) {
         this.currentPage = parseInt(page) || 0;
       },
 
-      _pageChanged: function(page) {
-        this.set('route.path', '/' + page);
+      _restoreRoutePage: function(prefix) {
+        if(prefix === '/catalog') {
+          this.set('route.path', '/' + this.currentPage);
+        }
+      },
+
+      _handleGoBack: function() {
+        this.goBack();
+        this.set('route.path', '/' + this.currentPage);
+      },
+      _handleGoNext: function() {
+        this.goNext();
+        this.set('route.path', '/' + this.currentPage);
       },
 
 
