--- a/src/life-nav/life-nav.html
+++ b/src/life-nav/life-nav.html
@@ -22,15 +22,26 @@
       :host {
         display: block;
       }
+
+      paper-listbox a{
+        color: inherit;
+        text-decoration: none;
+      }
     </style>
 
 
     <app-drawer-layout force-narrow>
       <app-drawer swipe-open>
-        <paper-listbox selected="{{page}}" attr-for-selected="name">
-          <paper-item name="playground">PlayGround</paper-item>
-          <paper-item name="catalog">Pattern Catalog</paper-item>
-          <paper-item name="about">About / License</paper-item>
+        <paper-listbox selected="[[page]]" attr-for-selected="name">
+          <a href="#/playground" name="playground">
+            <paper-item>PlayGround</paper-item>
+          </a>
+          <a href="#/catalog" name="catalog">
+            <paper-item>Pattern Catalog</paper-item>
+          </a>
+          <a href="#/about" name="about">
+            <paper-item>About / License</paper-item>
+          </a>
         </paper-listbox>
       </app-drawer>
 
