--- a/src/life-behaviors/life-pattern-catalog-behavior.html
+++ b/src/life-behaviors/life-pattern-catalog-behavior.html
@@ -61,12 +61,14 @@
     goNext: function() {
       if(this.canGoNext) {
         this.currentPage += 1;
+        this.fire('page-change', {page: this.currentPage});
       }
     },
 
     goBack: function() {
       if(this.canGoBack) {
         this.currentPage -= 1;
+        this.fire('page-change', {page: this.currentPage});
       }
     },
 
