--- a/src/life-dialogs/life-pattern-chooser.html
+++ b/src/life-dialogs/life-pattern-chooser.html
@@ -33,8 +33,8 @@
       </paper-dialog-scrollable>
 
       <div class="buttons">
-        <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="_handleGoBack">Back</paper-button>
-        <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="_handleGoNext">Next</paper-button>
+        <paper-button id="goBack" disabled="[[!canGoBack]]" on-tap="goBack">Back</paper-button>
+        <paper-button id="goNext" disabled="[[!canGoNext]]" on-tap="goNext">Next</paper-button>
         <paper-button id="ok" dialog-confirm autofocus on-tap="_closeDialog">OK</paper-button>
       </div>
     </paper-dialog>
@@ -117,6 +117,10 @@
         }
       },
 
+      listeners: {
+        'page-change': '_onPageChanged',
+      },
+
       _patternSelected: function(e) {
         if(this._domForSelectedPattern) {
           this._domForSelectedPattern.removeAttribute('selected');
@@ -140,12 +144,7 @@
           this._domForSelectedPattern.removeAttribute('selected');
         }
       },
-      _handleGoBack: function() {
-        this.goBack();
-        this.__removeOrRestoreSelectedAttr();
-      },
-      _handleGoNext: function() {
-        this.goNext();
+      _onPageChanged: function() {
         this.__removeOrRestoreSelectedAttr();
       },
       _closeDialog: function() {
