--- a/src/life-dialogs/life-pattern-chooser.html
+++ b/src/life-dialogs/life-pattern-chooser.html
@@ -145,6 +145,7 @@
         }
       },
       _onPageChanged: function() {
+        if(this._selectedPattern == null) return;
         this.__removeOrRestoreSelectedAttr();
       },
       _closeDialog: function() {
