--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -39,6 +39,7 @@
 <link rel="import" href="../life-catalog/life-catalog.html">
 <link rel="import" href="../life-path-warning/life-path-warning.html">
 <link rel="import" href="../life-about/life-about.html">
+<link rel="import" href="../life-catalog-data/life-catalog-data.html">
 
 <dom-module id="life-app">
   <template>
@@ -53,6 +54,9 @@
       pattern="/:page"
       data="{{routeData}}"
       tail="{{subroute}}"></app-route>
+
+    <life-catalog-data
+      catalog="{{app.catalog}}"></life-catalog-data>
 
     <life-nav
       title="PlayGround"
@@ -98,7 +102,7 @@
     <life-settings-dialog id="settingsDialog" app="{{app}}"></life-settings-dialog>
 
     <!-- TODO: create life-pattern-data element -->
-    <iron-ajax auto url="../../patterns-lite.json" handle-as="json" on-response="handleResponse"></iron-ajax>
+    <!-- <iron-ajax auto url="../../patterns-lite.json" handle-as="json" on-response="handleResponse"></iron-ajax> -->
   </template>
 
 
@@ -185,19 +189,11 @@
         'add-collection': '_addCollection',
         'show-collection-detail': '_showCollectionDetail',
         'open-settings-dialog': '_openSettingsDialog',
-        'title-change': '_handleTitleChange'
+        'title-change': '_handleTitleChange',
+        'catalog-updated': '_checkSelectedPattern'
       },
 
       ready: function() {
-        // this.app._catalog = [];
-
-        // this.push('app.saves', {
-        //   name: "test",
-        //   data: "RLE format"
-        // });
-
-        // this.set('app.saves', []);
-
       },
 
       _routePageChanged: function(page) {
@@ -243,6 +239,12 @@
         this.$.infoViewDialog.open();
       },
 
+      _checkSelectedPattern: function() {
+        if(this.app._selectedPattern == null) {
+          this.set('app._selectedPattern', this.app.catalog[0]);
+        }
+      },
+
       _startPlaying: function(){
         this.$.togglecontroller.textContent = "Pause";
         this.set('app.controller.isPlaying', true);
@@ -261,85 +263,6 @@
       handleClear: function(e, datail) {
         // document.querySelector('life-canvas').clearCanvas();
         this.$.mainCanvas.clearCanvas();
-      },
-
-      // handleItemChange: function(e){
-      //   // console.log("Changed!!!");
-      //   // console.log(e.detail.item.id);
-      //   // console.log(e);
-      //
-      //   this.app.selected = e.detail.item.id;
-      // },
-
-      handleResponse: function(r){
-        // console.log(r.detail.response);
-
-        this.app.catalog = [
-          {
-            id: 'pencil',
-            name: 'Pencil',
-            payload: ["1"],
-            meta: {
-              x: 1,
-              y: 1
-            }
-          },
-          {
-            id: 'glider',
-            name: 'Glider',
-            payload: [
-              "010",
-              "001",
-              "111"],
-            meta: {
-              x: 3,
-              y: 3
-            }
-          },
-          {
-            id: 'light_weight_spaceship',
-            name: 'Light Weight Spaceship',
-            payload: [
-              "01001",
-              "10000",
-              "10001",
-              "11110"
-            ],
-            meta: {
-              x: 5,
-              y: 4
-            }
-          },
-          {
-            id: 'glider_gun',
-            name: 'Glider Gun',
-            payload: [
-              "000000000000000000000000100000000000",
-              "000000000000000000000010100000000000",
-              "000000000000110000001100000000000011",
-              "000000000001000100001100000000000011",
-              "110000000010000010001100000000000000",
-              "110000000010001011000010100000000000",
-              "000000000010000010000000100000000000",
-              "000000000001000100000000000000000000",
-              "000000000000110000000000000000000000"
-            ],
-            meta: {
-              x: 36,
-              y: 9
-            }
-          }
-        ].concat(r.detail.response);
-
-        this.app.catalog.forEach(function(c){
-          c.starred = false;
-        });
-
-        this.notifyPath('app.catalog');
-
-        // this.app._selectedPattern = {};
-        // this.app._selectedPattern = this.app._catalog[0];
-        this.set('app._selectedPattern', this.app.catalog[0]);
       },
 
       _handleCreateNewSave: function(){
@@ -387,9 +310,9 @@
       // _computeShareURL: function(_selectingSaveInfo){
       //   return 'http://kumassy.com/life2/?state=paused&data=' + _selectingSaveInfo.rle;
       // },
-      _isPatternStarred: function(item){
-        return item.starred;
-      }
+      // _isPatternStarred: function(item){
+      //   return item.starred;
+      // }
 
     });
   </script>
