--- a/src/life-dialogs/life-collection-detail-dialog.html
+++ b/src/life-dialogs/life-collection-detail-dialog.html
@@ -4,7 +4,7 @@
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 
 
-<dom-module id="life-save-dialog">
+<dom-module id="life-collection-detail-dialog">
   <template>
     <paper-dialog id="dialog">
       <paper-input label="Title" value="{{target.title}}"></paper-input>
@@ -24,7 +24,7 @@
 
   <script>
     Polymer({
-      is: 'life-save-dialog',
+      is: 'life-collection-detail-dialog',
       properties: {
         target: {
           type: Object
